k8s/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
