k8s/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webserver-ingress
spec:
  backend:
    serviceName: webserver-service
    servicePort: 80
